--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "vite build",
+    "start": "vite preview",
+    "lint": "eslint . --ext ts,tsx,js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.55.0",
@@ -16,8 +16,6 @@
     "cmdk": "^1.1.1",
     "daisyui": "^5.1.13",
     "lucide-react": "^0.540.0",
-    "next": "15.4.7",
-    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sonner": "^2.0.7",
@@ -29,10 +27,16 @@
     "@anthropic-ai/claude-code": "^1.0.105",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^9",
-    "eslint-config-next": "15.4.7",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.7",
-    "unique-names-generator": "^4.7.1"
+    "typescript": "^5.2.2",
+    "unique-names-generator": "^4.7.1",
+    "vite": "^5.2.0"
   }
 }
