--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "daisyui": "^5.1.13",
+    "dexie": "^4.2.0",
+    "i18next": "^25.5.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.540.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-i18next": "^15.7.3",
     "react-router-dom": "^7.9.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
