Update project branding from "Quiz Quest" to "Sabuho"
- Changed the title in index.html and layout.jsx to reflect the new project name.
- Updated package.json to rename the project and include a description.
- Modified various components and translation files to replace references to "Quiz Quest" with "Sabuho", ensuring consistency across the application.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "quiz-quest-admin",
+  "name": "sabuho",
+  "description": "Master any subject through interactive quizzes and comprehensive learning tools",
   "version": "0.1.0",
   "private": true,
   "type": "module",
