--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "i18next": "^25.5.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.540.0",
+    "plausible-tracker": "^0.3.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-i18next": "^15.7.3",
