--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.540.0",
     "plausible-tracker": "^0.3.9",
     "react": "19.1.0",
+    "react-data-grid": "^7.0.0-beta.57",
     "react-dom": "19.1.0",
     "react-i18next": "^15.7.3",
     "react-router-dom": "^7.9.1",
