--- a/package.json
+++ b/package.json
@@ -46,5 +46,6 @@
     "typescript": "^5.2.2",
     "unique-names-generator": "^4.7.1",
     "vite": "^5.2.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
