--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-data-grid": "^7.0.0-beta.57",
     "react-dom": "19.1.0",
     "react-i18next": "^15.7.3",
+    "react-is": "^19.2.0",
     "react-router-dom": "^7.9.1",
+    "recharts": "^3.2.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
