--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "i18next": "^25.5.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.540.0",
-    "plausible-tracker": "^0.3.9",
+    "posthog-js": "^1.279.3",
     "react": "19.1.0",
     "react-data-grid": "^7.0.0-beta.57",
     "react-dom": "19.1.0",
