--- a/aws/sabuho-s3-process-uploaded-file/template.yml
+++ b/aws/sabuho-s3-process-uploaded-file/template.yml
@@ -1,69 +1,35 @@
-# This AWS SAM template has been generated from your function's configuration. If
-# your function has one or more triggers, note that the AWS resources associated
-# with these triggers aren't fully specified in this template and include
-# placeholder values. Open this template in AWS Infrastructure Composer or your
-# favorite IDE and modify it to specify a serverless application with other AWS
-# resources.
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: An AWS Serverless Application Model template describing your function.
+
+Description: Simple SAM template for a Lambda function using a Docker image, triggered by S3.
+
 Resources:
   sabuhos3processuploadedfile:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: ./src
-      Description: 'Processes PDF files from S3 with PyMuPDF text extraction and optional OCR'
+      PackageType: Image
+      ImageConfig:
+        Command: ["lambda_function.lambda_handler"]
+      # No ImageUri!
       MemorySize: 1024
       Timeout: 300
-      Handler: lambda_function.lambda_handler
-      Runtime: python3.13
-      Architectures:
-        - x86_64
-      EphemeralStorage:
-        Size: 512
-      EventInvokeConfig:
-        MaximumEventAgeInSeconds: 21600
-        MaximumRetryAttempts: 2
-      PackageType: Zip
-      Policies:
-        - Statement:
-            - Effect: Allow
-              Action:
-                - logs:CreateLogGroup
-              Resource: arn:aws:logs:us-east-1:801935245468:*
-            - Effect: Allow
-              Action:
-                - logs:CreateLogStream
-                - logs:PutLogEvents
-              Resource:
-                - >-
-                  arn:aws:logs:us-east-1:801935245468:log-group:/aws/lambda/sabuho-s3-process-uploaded-file:*
-            - Effect: Allow
-              Action:
-                - s3:GetObject
-                - s3:GetObjectVersion
-              Resource:
-                - !Sub '${Bucket1.Arn}/*'
-      RecursiveLoop: Terminate
-      SnapStart:
-        ApplyOn: None
       Events:
-        BucketEvent1:
+        S3Upload:
           Type: S3
           Properties:
-            Bucket:
-              Ref: Bucket1
+            Bucket: !Ref UploadBucket
             Events:
               - s3:ObjectCreated:*
-      RuntimeManagementConfig:
-        UpdateRuntimeOn: Auto
+      Policies:
+        - S3ReadPolicy:
+            BucketName: !Ref UploadBucket
+        - CloudWatchLogsPolicy: {}
       Environment:
         Variables:
-          # Set to 'true' to enable local/test mode (e.g., for AWS SAM local invoke). Default: 'false'
           AWS_SAM_LOCAL: 'true'
-          # Test file path inside the Lambda container (the file is in src/test.pdf and will be at /var/task/test.pdf in the container)
           LOCAL_TEST_FILE: '/var/task/test.pdf'
-  Bucket1:
+
+  UploadBucket:
     Type: AWS::S3::Bucket
     Properties:
       VersioningConfiguration:
@@ -72,18 +38,3 @@ Resources:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
               SSEAlgorithm: AES256
-  BucketPolicy1:
-    Type: AWS::S3::BucketPolicy
-    Properties:
-      Bucket: Bucket1
-      PolicyDocument:
-        Statement:
-          - Action: s3:*
-            Effect: Deny
-            Principal: '*'
-            Resource:
-              - arn:aws:s3:::Bucket1/*
-              - arn:aws:s3:::Bucket1
-            Condition:
-              Bool:
-                aws:SecureTransport: false
