Refactor S3 PDF processing Lambda function with Docker and modular text extraction
- Updated Dockerfile to include necessary dependencies and set up the Lambda environment for PDF processing.
- Introduced modular structure for text extraction and OCR processing, separating concerns into dedicated files for better maintainability.
- Updated event.json to reflect the new S3 bucket name and object key for testing.
- Revised README.md to include updated deployment instructions and usage examples.
- Added test suite for PDF text extraction to ensure functionality and performance metrics.
- Removed outdated SAM template as the deployment now relies on Docker.

--- a/aws/sabuho-s3-process-uploaded-file/Dockerfile
+++ b/aws/sabuho-s3-process-uploaded-file/Dockerfile
@@ -1,12 +1,22 @@
+# Dockerfile
 FROM ubuntu:22.04
 
+# System deps
 RUN apt-get update && \
-    apt-get install -y python3 python3-pip tesseract-ocr && \
-    apt-get clean
+    DEBIAN_FRONTEND=noninteractive apt-get install -y \
+      python3 python3-pip tesseract-ocr \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-COPY src/ /var/task/
+# Lambda Runtime Interface Client (critical piece you were missing)
+RUN pip3 install awslambdaric
+
+# Code
 WORKDIR /var/task
+COPY src/ /var/task/
 
+# Python deps
 RUN pip3 install -r requirements.txt
 
+# ENTRYPOINT runs the RIC, CMD points to your handler
+ENTRYPOINT ["python3", "-m", "awslambdaric"]
 CMD ["lambda_function.lambda_handler"]
