--- a/aws/sabuho-process-document-hub/src/requirements.txt
+++ b/aws/sabuho-process-document-hub/src/requirements.txt
@@ -2,16 +2,21 @@
 boto3==1.35.80
 
 # OCR Processing
-PyMuPDF==1.24.14
+PyMuPDF==1.26.5
 Pillow==11.0.0
 pytesseract==0.3.13
 
 # AI Processing
 openai==1.101.0
-tiktoken==0.5.2
+tiktoken==0.8.0
 
 # Database
-supabase==2.10.0
+supabase==2.22.2
+postgrest==2.22.2  # Must match supabase version
 
 # Lambda Runtime
 awslambdaric==2.0.4
+
+# Testing
+pytest==8.3.4
+pytest-mock==3.14.0
