Refactor environment configuration and update execution modes in Sabuho Document Processing Hub
- Changed environment variable from ENV to APP_ENV_TYPE in docker-compose.yml for clarity.
- Consolidated environment variable settings in Dockerfile to improve layer caching.
- Removed the config.py file to simplify configuration management.
- Updated README.md to reflect changes in execution modes and deployment instructions for ECS.
- Enhanced main.py to clarify execution modes and streamline the processing logic.

--- a/aws/sabuho-process-document-hub/docker-compose.yml
+++ b/aws/sabuho-process-document-hub/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - ./src:/app:ro
     environment:
-      - ENV=local
+      - APP_ENV_TYPE=local
       - PYTHONUNBUFFERED=1
       - SUPABASE_URL=${SUPABASE_URL}
       - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
