--- a/aws/sabuho-process-document-hub/Dockerfile
+++ b/aws/sabuho-process-document-hub/Dockerfile
@@ -1,31 +1,29 @@
 FROM ubuntu:22.04
 
-ENV DEBIAN_FRONTEND=noninteractive
-ENV PYTHONUNBUFFERED=1
+# 1. Set envs in ONE layer
+ENV DEBIAN_FRONTEND=noninteractive \
+    PYTHONUNBUFFERED=1 \
+    PYTHONPATH=/app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    python3.10 \
-    python3-pip \
-    tesseract-ocr \
-    tesseract-ocr-eng \
-    libgl1-mesa-glx \
-    libglib2.0-0 \
-    curl \
-    && apt-get clean \
+# 2. Install system deps in ONE RUN
+RUN apt-get update && \
+    apt-get install -y \
+        python3.10 \
+        python3-pip \
+        tesseract-ocr \
+        tesseract-ocr-eng \
+        libgl1-mesa-glx \
+        libglib2.0-0 \
+        curl \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
-# Copy and install Python dependencies
+# 3. Separate deps from code for better caching
 COPY requirements.txt .
 RUN pip3 install --no-cache-dir -r requirements.txt
 
-# Copy source code
+# 4. Now copy the app
 COPY src/ .
 
-# Set Python path so imports work correctly
-ENV PYTHONPATH=/app
-
-# Default command
 CMD ["python3", "main.py"]
