--- a/aws/sabuho-process-document-hub/docker-compose.yml
+++ b/aws/sabuho-process-document-hub/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - ./src:/app:ro
     environment:
-      - APP_ENV_TYPE=local
+      - APP_ENV_TYPE=${APP_ENV_TYPE:-production}
       - PYTHONUNBUFFERED=1
       - SUPABASE_URL=${SUPABASE_URL}
       - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
@@ -18,5 +18,5 @@ services:
       - AWS_S3_BUCKET=${AWS_S3_BUCKET:-sabuho-files}
       - TEST_FILE_PATH=${TEST_FILE_PATH:-uploads/test-compendio.pdf}
       # Allowed TEST_MESSAGE_TYPE values: ocr_process, ai_process
-      - TEST_MESSAGE_TYPE=${TEST_MESSAGE_TYPE:-ai_process}
+      - TEST_MESSAGE_TYPE=${TEST_MESSAGE_TYPE:-ocr_process}
       - TEST_SESSION_ID=${TEST_SESSION_ID:-a01c29d9-e52c-49ab-9bcd-5c20f95c7d2b}
