--- a/aws/sabuho-process-document-hub/docker-compose.yml
+++ b/aws/sabuho-process-document-hub/docker-compose.yml
@@ -16,7 +16,13 @@ services:
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - AWS_REGION=${AWS_REGION:-us-east-1}
       - AWS_S3_BUCKET=${AWS_S3_BUCKET:-sabuho-files}
+      - AWS_S3_OCR_BUCKET=${AWS_S3_OCR_BUCKET:-sabuho-files-ocr}
       - TEST_FILE_PATH=${TEST_FILE_PATH:-uploads/test-compendio.pdf}
       # Allowed TEST_MESSAGE_TYPE values: ocr_process, ai_process
       - TEST_MESSAGE_TYPE=${TEST_MESSAGE_TYPE:-ocr_process}
       - TEST_SESSION_ID=${TEST_SESSION_ID:-a01c29d9-e52c-49ab-9bcd-5c20f95c7d2b}
+      # Production SQS configuration
+      - S3_EVENTS_QUEUE_URL=${S3_EVENTS_QUEUE_URL}
+      - PROCESSING_QUEUE_URL=${PROCESSING_QUEUE_URL}
+      - PROCESSING_DLQ_URL=${PROCESSING_DLQ_URL}
+      - MAX_WORKERS=${MAX_WORKERS:-4}
