--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "vite --host",
     "build": "vite build",
     "start": "vite preview",
-    "lint": "eslint . --ext ts,tsx,js,jsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext ts,tsx,js,jsx --report-unused-disable-directives --max-warnings 0",
+    "mock-server": "bun run mock-server/index.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.55.0",
@@ -39,10 +40,12 @@
     "@tailwindcss/postcss": "^4",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/uuid": "^11.0.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^9",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "hono": "^4.10.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5.2.2",
