Implement PaddleOCR for enhanced text extraction in Sabuho Document Processing Hub
- Replaced Tesseract OCR with PaddleOCR for improved accuracy and multi-language support.
- Updated Dockerfile to remove Tesseract dependencies and include PaddleOCR and PaddlePaddle.
- Added EFS configuration in `ecs-task-definition.json` to cache PaddleOCR models for faster startup.
- Enhanced OCR processing logic to utilize PaddleOCR's capabilities for both full-page and embedded image OCR.
- Introduced a new EFS deployment guide for caching models and optimizing performance.
- Updated requirements.txt to reflect new dependencies for PaddleOCR.
- Improved error handling and logging in OCR processing functions for better debugging and user feedback.

--- a/aws/sabuho-process-document-hub/docker-compose.yml
+++ b/aws/sabuho-process-document-hub/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     container_name: sabuho-processor
     volumes:
       - ./src:/app:ro
+      - /tmp/paddleocr-models:/root/.paddlex
     environment:
       - APP_ENV_TYPE=${APP_ENV_TYPE:-production}
       - PYTHONUNBUFFERED=1
