--- a/aws/sabuho-process-document-hub/Dockerfile
+++ b/aws/sabuho-process-document-hub/Dockerfile
@@ -3,17 +3,18 @@ FROM ubuntu:22.04
 # 1. Set envs in ONE layer
 ENV DEBIAN_FRONTEND=noninteractive \
     PYTHONUNBUFFERED=1 \
-    PYTHONPATH=/app
+    PYTHONPATH=/app \
+    GLOG_minloglevel=2 \
+    FLAGS_pir_apply_inplace_pass=0
 
 # 2. Install system deps in ONE RUN
 RUN apt-get update && \
     apt-get install -y \
         python3.10 \
         python3-pip \
-        tesseract-ocr \
-        tesseract-ocr-eng \
         libgl1-mesa-glx \
         libglib2.0-0 \
+        libgomp1 \
         curl \
     && rm -rf /var/lib/apt/lists/*
 
