Update mock server and HomePage to support question filtering and improved data handling
- Enhanced the mock server to include an `is_sample` parameter for filtering questions based on their sample status.
- Updated the `fetchResourceSessionQuestions` function to return total question counts and sample counts.
- Modified HomePage to display the total number of generated questions and sample counts, improving user feedback.
- Adjusted the question generation logic to ensure a mix of sample and non-sample questions for better testing scenarios.
- Refactored UI components for clarity and improved user experience in displaying questions and topics.

--- a/aws/sabuho-process-document-hub/docker-compose.yml
+++ b/aws/sabuho-process-document-hub/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: sabuho-processor
     volumes:
       - ./src:/app:ro
-      - /tmp/paddleocr-models:/root/.paddlex
+      - /tmp/.paddlex:/root/.paddlex
     environment:
       - APP_ENV_TYPE=${APP_ENV_TYPE:-production}
       - PYTHONUNBUFFERED=1
