Implement modular OCR engine architecture with Tesseract and PaddleOCR support
- Introduced a new OCR engine interface to standardize text extraction methods across different OCR engines.
- Implemented PaddleOCR and Tesseract as separate modules, allowing for flexible OCR engine selection based on environment configuration.
- Updated the OCR processing logic to utilize the selected engine for both full-page and embedded image OCR.
- Enhanced Dockerfile and requirements.txt to include necessary dependencies for both OCR engines.
- Improved error handling and logging for better debugging and user feedback during OCR operations.
- Updated settings.local.json to allow configuration of the OCR engine type.

--- a/aws/sabuho-process-document-hub/Dockerfile
+++ b/aws/sabuho-process-document-hub/Dockerfile
@@ -16,6 +16,9 @@ RUN apt-get update && \
         libglib2.0-0 \
         libgomp1 \
         curl \
+        tesseract-ocr \
+        tesseract-ocr-eng \
+        tesseract-ocr-spa \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
