--- a/aws/sabuho-process-document-hub/requirements.txt
+++ b/aws/sabuho-process-document-hub/requirements.txt
@@ -4,6 +4,11 @@ boto3==1.35.80
 # OCR Processing
 PyMuPDF==1.26.5
 Pillow==11.0.0
+
+# Tesseract OCR
+pytesseract==0.3.13
+
+# PaddleOCR
 numpy>=1.23.0
 paddlepaddle==3.0.0
 paddleocr>=3.2.0
