--- a/aws/docker-compose.yml
+++ b/aws/docker-compose.yml
@@ -1,28 +1,44 @@
-version: '3.8'
-
 services:
   # LocalStack - Local AWS cloud stack
   localstack:
     image: localstack/localstack:latest
     container_name: sabuho-localstack
     ports:
-      - "4566:4566"            # LocalStack gateway
-      - "4510-4559:4510-4559"  # External services port range
+      - "5566:4566"            # LocalStack gateway (changed from 4566 to avoid conflicts)
+      - "5510-5559:4510-4559"  # External services port range (changed from 4510-4559)
     environment:
       - SERVICES=s3,sqs,lambda
-      - DEBUG=1
-      - DATA_DIR=/tmp/localstack/data
+      - DEBUG=0
       - DOCKER_HOST=unix:///var/run/docker.sock
-      - PERSISTENCE=1
       - AWS_DEFAULT_REGION=us-east-1
+      - EXTRA_CORS_ALLOWED_ORIGINS=http://localhost:5173
+      - EXTRA_CORS_ALLOWED_HEADERS=*
+      - SQS_ENDPOINT_STRATEGY=off
     volumes:
-      - "./localstack-data:/tmp/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "./init-localstack.sh:/etc/localstack/init/ready.d/init-localstack.sh"
     networks:
       - sabuho-network
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:4566/_localstack/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # Mock Server (Supabase mock)
+  mock-server:
+    build:
+      context: ..
+      dockerfile: mock-server/Dockerfile
+    container_name: sabuho-mock-server
+    ports:
+      - "4001:3001"  # Changed external port from 3001 to 4001
+    environment:
+      - MOCK_SERVER_PORT=3001
+    networks:
+      - sabuho-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3001/health"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -34,7 +50,7 @@ services:
       dockerfile: Dockerfile.local
     container_name: sabuho-presign-url
     ports:
-      - "3002:8080"
+      - "4002:8080"  # Changed external port from 3002 to 4002
     environment:
       - AWS_ACCESS_KEY_ID=test
       - AWS_SECRET_ACCESS_KEY=test
@@ -53,6 +69,8 @@ services:
       context: ./sabuho-process-document-hub
       dockerfile: Dockerfile
     container_name: sabuho-processor
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     volumes:
       - ./sabuho-process-document-hub/src:/app:ro
       - /tmp/.paddlex:/root/.paddlex
@@ -60,7 +78,7 @@ services:
       - APP_ENV_TYPE=${APP_ENV_TYPE:-development}
       - PYTHONUNBUFFERED=1
       - OCR_ENGINE=${OCR_ENGINE:-tesseract}
-      - SUPABASE_URL=${SUPABASE_URL:-http://localhost:3001}
+      - SUPABASE_URL=${SUPABASE_URL:-http://mock-server:3001}
       - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY:-mock-key}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - AWS_ACCESS_KEY_ID=test
@@ -73,11 +91,13 @@ services:
       - TEST_MESSAGE_TYPE=${TEST_MESSAGE_TYPE:-ai_process}
       - TEST_SESSION_ID=${TEST_SESSION_ID:-a01c29d9-e52c-49ab-9bcd-5c20f95c7d2b}
       - S3_EVENTS_QUEUE_URL=http://localstack:4566/000000000000/sabuho-s3-events
-      - PROCESSING_QUEUE_URL=http://localstack:4566/000000000000/sabuho-processing
-      - PROCESSING_DLQ_URL=http://localstack:4566/000000000000/sabuho-processing-dlq
+      - PROCESSING_QUEUE_URL=http://localstack:4566/000000000000/sabuho-processing.fifo
+      - PROCESSING_DLQ_URL=http://localstack:4566/000000000000/sabuho-processing-dlq.fifo
       - MAX_WORKERS=${MAX_WORKERS:-4}
     depends_on:
       localstack:
+        condition: service_healthy
+      mock-server:
         condition: service_healthy
     networks:
       - sabuho-network
