--- a/aws/sabuho-process-document-hub/requirements.txt
+++ b/aws/sabuho-process-document-hub/requirements.txt
@@ -17,6 +17,10 @@ paddleocr>=3.2.0
 openai==1.101.0
 tiktoken==0.8.0
 
+# ML-based Topic Identification
+sentence-transformers==3.3.1
+scikit-learn==1.6.1
+
 # Database
 supabase==2.22.2
 supabase-auth==2.11.1
