--- a/aws/sabuho-process-document-hub/requirements.txt
+++ b/aws/sabuho-process-document-hub/requirements.txt
@@ -8,18 +8,15 @@ Pillow==11.0.0
 # Tesseract OCR
 pytesseract==0.3.13
 
-# PaddleOCR
-numpy>=1.23.0
-paddlepaddle==3.0.0
-paddleocr>=3.2.0
-
 # AI Processing
+numpy>=1.23.0
 openai==1.101.0
 tiktoken==0.8.0
 
 # ML-based Topic Identification
 sentence-transformers==3.3.1
 scikit-learn==1.6.1
+bertopic==0.16.4
 
 # Database
 supabase==2.22.2
