--- a/aws/sabuho-process-document-hub/requirements.txt
+++ b/aws/sabuho-process-document-hub/requirements.txt
@@ -13,10 +13,8 @@ numpy>=1.23.0
 openai==1.101.0
 tiktoken==0.8.0
 
-# ML-based Topic Identification
-sentence-transformers==3.3.1
-scikit-learn==1.6.1
-bertopic==0.16.4
+# Structure-based Topic Identification (no ML dependencies needed)
+# Uses font formatting markers from OCR text
 
 # Database
 supabase==2.22.2
