Update mock server configuration for external port usage
- Added a new environment variable, MOCK_SERVER_EXTERNAL_PORT, to allow configuration of the external port for the mock server.
- Updated the presigned URL generation logic to utilize the external port, enhancing flexibility in deployment scenarios.

--- a/aws/docker-compose.yml
+++ b/aws/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - "4001:3001"  # Changed external port from 3001 to 4001
     environment:
       - MOCK_SERVER_PORT=3001
+      - MOCK_SERVER_EXTERNAL_PORT=4001
     networks:
       - sabuho-network
     healthcheck:
